# EndoPiGraph-AJmorph

./: .gitattributes  .gitignore  B1_B3_SCIENCE_TASKS_SUMMARY.md  CLOSEOUT_CHECKLIST.md  LICENSE  NETWORK_DISCOVERIES.md  README.md  VALIDATION_SUMMARY.md  pyproject.toml  run_polarityjam_test.sh
configs/: polarityjam_test.yaml
curated_dataset/: README.md
curated_dataset/data/: manifest_subset.csv
curated_dataset/models/: ajmorph_classifier_v2.joblib  ajmorph_evaluation_report.json
curated_dataset/outputs/: all_cells.csv  all_edges.csv  polarity_analysis_proper.json  qc_metrics.csv  run_report.json
curated_dataset/scripts/: analyze_by_condition.py  train_classifier_proper.py
data/: manifest.csv
data/S-BIAD1540/: S-BIAD1540_info.json  S-BIAD1540_links.txt  S-BIAD1540_study.json  files_manifest.csv  manifest_egm2_full.csv  subset_manifest.csv
data/ve_strat/: manifest.csv
examples/: config_sbiad1540.yaml  run_sbiad1540.sh
models/: ajmorph_classifier.joblib
runs/: combined_typed_vs_untyped_results.json
runs/egm2_full/: all_cells.csv  all_polarity.csv  batch_log.txt  hardened_network_stats.json  image_features_for_classification.csv  manifest_egm2_local.csv  pipeline_log.txt  run_report.json  (+1 more)
scripts/: analyze_polarity_proper.py  analyze_polarity_with_flow_inference.py  combine_and_analyze.py  download_egm2.sh  fix_polarity_reporting.py  harden_network_stats.py  process_egm2_batch.py  qc_criteria.py  qc_criteria_v2.py  run_egm2_batch.sh  typed_vs_untyped_corrected.py  typed_vs_untyped_experiment.py
src/: EndoPiGraph_AJmorph_v1_allinone.py
(+844 files in other folders)
